# python-project-49

./: .gitignore  Makefile  README.md  brain-calc.cast  brain-even.cast  brain-gcd.cast  brain-prg.cast  brain-prime.cast  pyproject.toml
brain_games/scripts/: brain_even.py  brain_games.py  main.py
brain_games/scripts/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
